--- a/index.html
+++ b/index.html
@@ -12,51 +12,56 @@
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
 
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>Task Board</title>
+  <title>Add Item</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="text-center mb-5">
-          <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#itemModal">Add Item</button>
-        </div>
-
-        <div id="itemModal" class="modal">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="itemModalLabel">Add Items</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <form id="itemForm">
-                  <div class="mb-3">
-                    <label for="itemName" class="form-label">Item Name</label>
-                    <input type="text" class="form-control" id="itemName" name="itemName" required>
-                  </div>
-                  <div class="mb-3">
-                    <label for="quantity" class="form-label">Quantity</label>
-                    <input type="text" class="form-control" id="quantity" name="quantity" required>
-                  </div>
-                  <div class="mb-3">
-                    <label for="expDate" class="form-label">Expiration Date</label>
-                    <input class="form-control" id="expDate" name="expDate" required>
-                  </div>
-                  <button type="submit" class="btn btn-primary" id="addItemBtn">Add Item</button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
+  <div class="container">
+    <div class="text-center mb-5">
+      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#itemModal">Add Item</button>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    <div id="itemModal" class="modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="itemModalLabel">Add Items</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="itemForm">
+              <div class="mb-3">
+                <label for="itemName" class="form-label">Item Name</label>
+                <input type="text" class="form-control" id="itemName" name="itemName" required>
+              </div>
+              <div class="mb-3">
+                <label for="quantity" class="form-label">Quantity</label>
+                <div class="input-group">
+                  <button type="button" class="btn btn-outline-secondary" id="decreaseBtn">-</button>
+                  <input type="text" class="form-control" id="quantity" name="quantity" value="1" required>
+                  <button type="button" class="btn btn-outline-secondary" id="increaseBtn">+</button>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="expDate" class="form-label">Expiration Date</label>
+                <input class="form-control" id="expDate" name="expDate" required>
+              </div>
+              <button type="submit" class="btn btn-primary" id="addItemBtn">Add Item</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+   
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+  integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 
   <script src="./assets/js/script.js"></script>
 </body>
