--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </div>
               <div class="mb-3">
                 <label for="expDate" class="form-label">Expiration Date</label>
-                <input class="form-control" id="expDate" name="expDate" required>
+                <input type="date" class="form-control" id="expDate" name="expDate" required>
               </div>
               <button type="submit" class="btn btn-primary" id="addItemBtn">Add Item</button>
             </form>
